--- a/src/frontEnd/public/index.html
+++ b/src/frontEnd/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
+  <base href="/" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="stylesheet" href="./Static/css/index.css">
-
   <title>React App</title>
 </head>
 
