--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="pt-br"><head><base href="/"/><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="stylesheet" href="./Static/css/index.css"><title>React App</title><script type="text/jsx" defer="defer" src="/Static/js/main.16a63006.js"></script><link href="/Static/css/main.4f6fd11c.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html>
+<html lang="pt-br">
+
+<head>
+    <base href="/" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="stylesheet" href="/Static/css/index.css">
+    <title>React App</title>
+    <script type="text/jsx" defer="defer" src="/Static/js/main.16a63006.js"></script>
+    <link href="/Static/css/main.4f6fd11c.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="root"></div>
+</body>
+
+</html>
